--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,9 @@
      Pretty hectic so when i got to highschool i decided to do homeschooling, which was better than the long drives early in the morining.
     </p1>
     <h2> My Favorite Things </h2>
-   <a href= https://www.nhl.com/mapleleafs/> img src="Logo.png" alt= "Maple leafs logo">
+   <a href= https://www.nhl.com/mapleleafs/> 
+      <img src="Logo.png" alt= "Maple leafs logo">
+           </a>
       <h3> Hockey Teams </h3>
       <ol>
           <li> Maple Leafs </li>
