--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </span>
                             </blockqoute>
                             <p> &#169 2021 Trinity Simon
-                                <a href="mailto:trinitysimon333@gmail.com
+                                <a href="mailto:trinitysimon333@gmail.com" >
                                     subject="message from CSD 111 website" </p>
                         </a>
                         <meta property= og:" Author" content= Author/>
