--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
                                 </span>
                             </blockqoute>
                             <p> &#169 2021 Trinity Simon
-                                <a href="mailto:trinitysimon333@gmail.com </a>
-                                         subject="message from CSD 111 website" </p>
+                                <a href="mailto:trinitysimon333@gmail.com?subject="message from CSD 111 website">
+                                </a>
+                                </p>
                         <meta property= og:" Author" content= Author/>
                         <meta property="og:Description" content="Description" />
                         <!-- Found me -->
