--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 </span>
                             </blockqoute>
                             <p> &#169 2021 Trinity Simon
-                                <a href="mailto:trinitysimon333@gmail.com?subject="message from CSD 111 website">
+                                <a href="mailto:trinitysimon333@gmail.com?subject="Feedback&body=Message"> A message from csd111
                                 </a>
                                 </p>
                         <meta property= og:" Author" content= Author/>
