--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                                     <em>Robin Williams </em>
                                 </span>
                             </blockqoute>
-                            <p> &#169 2021 Trinity Simon
-                                <a href="mailto:trinitysimon333@gmail.com?subject="Feedback&body=Message"> A message from csd111
+                            <p> &#169 2022 Trinity Simon
+                               <a href="mailto:trinitysimon333@gmail.com">A message from CSD111</a>
                                 </a>
                                 </p>
                         <meta property= og:" Author" content= Author/>
