--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                                     <em>Robin Williams </em>
                                 </span>
                             </blockqoute>
-                            <p> &#169 2021 Trinity Simon
-                                <a href="mailto:trinitysimon333@gmail.com </a>
-                                    subject="message from CSD 111 website" </p>
+                            <p>
+                                <a href="mailto:trinitysimon333@gmail.com?subject = Feedback&body = Message> "&#169 2021 Trinity Simon" </a>
+                                    &#169 2021 Trinity Simon </p>
                         
-                        <meta property= og:" Author" content= Author/>
+                        <meta property= og:"Author" content= Author/>
                         <meta property="og:Description" content="Description" />
                         <!-- Found me -->
 
